--- a/index.html
+++ b/index.html
@@ -1,36 +1,69 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>vamos</title>
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin=""/>
+  <!-- The project's main CSS module -->
+  <link rel="stylesheet" href="css/styles.css">
+  <style>
 
-    <title>Center City</title>
+/* Style for checkbox container */
+#checkbox-container {
+  position: absolute;
+  top: 20px; /* Adjust top position as needed */
+  right: 20px; /* Adjust right position as needed */
+  z-index: 1000; /* Ensure the checkboxes appear above the map */
+  background-color: rgba(255, 255, 255, 0.8); /* Adjust background color and opacity as needed */
+  padding: 5px;
+  border-radius: 5px;
+}
 
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin=""/>
+    /* Style for the map container */
+    #eats-map {
+      position: relative;
+      width: 80%; /* Adjust width as needed */
+      margin: 20px auto; /* Adjust margin as needed */
+    }
 
-    <!-- The project's main CSS module -->
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-    <h1>vamos</h1>
-    <div id="eats-map"></div>
+    /* Style for category options */
+    .category-options {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 10px;
+    }
 
-    <div id="eats-filters">
-      <label><input type="checkbox" class="cb" name="place-filter-type" value="Eat"> Restaurant</label>
-      <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Drink"> Bar</label>
-      <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Culture"> Culture</label>
-      <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Shop"> Shop</label>
+    .category-option-label {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  </style>
+
+</head>
+
+<body>
+  <h1>vamos</h1>
+  <div id="eats-map">
+    <!-- Your map content goes here -->
+    <!-- Container for checkboxes -->
+    <div id="checkbox-container">
+      <div id="eats-filters">
+        <label><input type="checkbox" class="cb" name="place-filter-type" value="Eat"> Restaurant</label>
+        <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Drink"> Bar</label>
+        <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Culture"> Culture</label>
+        <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Shop"> Shop</label>
+      </div>
     </div>
+  </div>
 
-    <!-- Leaflet JavaScript -->
-    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
-
-    <!-- Lodash for useful functions -->
-    <script src="https://unpkg.com/lodash@4.17.21/lodash.min.js"></script>
-
-    <!-- The project's main JavaScript module -->
-    <script src="js/main.js" type="module"></script>
-    
-  </body>
+  <!-- Leaflet JavaScript -->
+  <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+  <!-- Lodash for useful functions -->
+  <script src="https://unpkg.com/lodash@4.17.21/lodash.min.js"></script>
+  <!-- The project's main JavaScript module -->
+  <script src="js/main.js" type="module"></script>
+</body>
 </html>
