trying to fix checkboxes

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <!-- Container for checkboxes -->
     <div id="checkbox-container">
       <div id="eats-filters">
-        <label><input type="checkbox" class="cb" name="place-filter-type" value="Eat"> Restaurant</label>
-        <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Drink"> Bar</label>
+        <label><input type="checkbox" class="cb" name="place-filter-type" value="Eat"> Eat</label>
+        <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Drink"> Drink</label>
         <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Culture"> Culture</label>
         <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Shop"> Shop</label>
       </div>
