--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <div id="checkbox-container">
       <div id="eats-filters">
         <label><input type="checkbox" class="cb" name="place-filter-type" value="Eat"> Eat</label>
-        <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Drink"> Drink</label>
-        <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Culture"> Culture</label>
-        <label><input type="checkbox"class="cb" name="eats-filter-nhood" value="Shop"> Shop</label>
+        <label><input type="checkbox"class="cb" name="place-filter-type" value="Drink"> Drink</label>
+        <label><input type="checkbox"class="cb" name="place-filter-type" value="Culture"> Culture</label>
+        <label><input type="checkbox"class="cb" name="place-filter-type" value="Shop"> Shop</label>
       </div>
     </div>
   </div>
